--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ sudo: required
 services:
   - docker
 
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq httpie
+
 script:
   - ./build.sh
 
